--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -8,15 +8,17 @@
 <body>
 <!-- Page Wrapper -->
 <div id="wrapper">
+        <!-- topbar -->
+        <th:block th:replace="~{fragments/header :: headerFragment}"></th:block>
         <!-- sidebar fragment 사용 -->
-        <th:block th:replace="fragments/sidebar :: sidebarFragment"></th:block>
-
+        <th:block th:replace="~{fragments/sidebar :: sidebarFragment}"></th:block>
     <!-- Content Wrapper -->
     <div id="content-wrapper" class="d-flex flex-column">
         <!-- Main Content -->
         <div id="content">
             <!-- content fragment 사용 -->
-            <th:block layout:fragment="content"></th:block>
+            <th:block layout:fragment="content">
+            </th:block>
             <!-- content script -->
             <th:block layout:fragment="script"></th:block>
         </div>
