--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -7,10 +7,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="description" content="꼬보 맛집 리스트">
+        <meta name="author" content="devLsy">
 
-        <title>SB Admin 2 - Dashboard</title>
+        <title>꼬보 맛집 리스트</title>
 
         <!-- Custom fonts for this template-->
         <link th:href="@{vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
