--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default_layout}">
 
-<div layout:fragment="content">
-
+<th:block layout:fragment="content">
     <!-- Begin Page Content -->
     <div class="container-fluid">
 
@@ -335,6 +334,6 @@
 
     </div>
     <!-- /.container-fluid -->
-</div>
+</th:block>
 
 </html>
