--- a/src/main/resources/templates/pages/dining/list.html
+++ b/src/main/resources/templates/pages/dining/list.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default_layout}">
 
-<div layout:fragment="content">
+<th:block layout:fragment="content">
     <table class="table">
         <thead>
         <tr>
@@ -20,6 +20,6 @@
         </tr>
         </tbody>
     </table>
-</div>
+</th:block>
 
 </html>
