--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -24,8 +24,8 @@
             <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                 <div class="bg-white py-2 collapse-inner rounded">
 <!--                    <h6 class="collapse-header">Login Screens:</h6>-->
-                    <a class="collapse-item" th:href="@{/dining}">맛집 리스트</a>
-                    <a class="collapse-item" th:href="@{/dining/reg}">맛집 등록</a>
+                    <a class="collapse-item" th:href="@{/list}">맛집 리스트</a>
+                    <a class="collapse-item" th:href="@{/reg}">맛집 등록</a>
                 </div>
             </div>
         </li>
