--- a/src/main/resources/templates/pages/dining/reg.html
+++ b/src/main/resources/templates/pages/dining/reg.html
@@ -14,50 +14,52 @@
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">맛집 등록</h1>
                             </div>
                             <form class="user">
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                               placeholder="First Name">
+                                        <input type="search" class="form-control form-control-user" id="name" name="name" placeholder="맛집명을 입력해주세요." />
                                     </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                               placeholder="Last Name">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                           placeholder="Email Address">
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                               id="exampleInputPassword" placeholder="Password">
+                                        <input type="text" class="form-control form-control-user" id="mainAddress" name="mainAddress" placeholder="메인주소" />
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                               id="exampleRepeatPassword" placeholder="Repeat Password">
+                                        <input type="text" class="form-control form-control-user" id="detailAddress" name="detailAddress"  placeholder="상세주소" />
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control form-control-user" id="phone" name="phone" placeholder="연락처를 입력해주세요." />
+                                </div>
+                                <div class="form-group">
+                                    <select name="category" class="form-control form-control-sm">
+                                        <option value="">선택</option>
+                                        <option value="01">한식</option>
+                                        <option value="02">중식</option>
+                                        <option value="03">일식</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <input type="search" class="form-control form-control-user" id="rating" name="rating" placeholder="평점을 입력해주세요." />
+                                </div>
+                                <div class="form-group">
+                                    <select name="revisit" class="form-control form-control-sm">
+                                        <option value="">선택</option>
+                                        <option value="1">있음</option>
+                                        <option value="0">없음</option>
+                                    </select>
+                                </div>
                                 <a href="login.html" class="btn btn-primary btn-user btn-block">
-                                    Register Account
-                                </a>
-                                <hr>
-                                <a href="index.html" class="btn btn-google btn-user btn-block">
-                                    <i class="fab fa-google fa-fw"></i> Register with Google
-                                </a>
-                                <a href="index.html" class="btn btn-facebook btn-user btn-block">
-                                    <i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
+                                    등록
                                 </a>
                             </form>
-                            <hr>
                             <div class="text-center">
-                                <a class="small" href="forgot-password.html">Forgot Password?</a>
+<!--                                <a class="small" href="forgot-password.html">Forgot Password?</a>-->
                             </div>
                             <div class="text-center">
-                                <a class="small" href="login.html">Already have an account? Login!</a>
+<!--                                <a class="small" href="login.html">Already have an account? Login!</a>-->
                             </div>
                         </div>
                     </div>
