--- a/src/main/resources/templates/pages/dining/reg.html
+++ b/src/main/resources/templates/pages/dining/reg.html
@@ -19,21 +19,22 @@
                             <form class="user">
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="search" class="form-control form-control-user" id="name" name="name" placeholder="맛집명을 입력해주세요." />
+                                        맛집명 <input type="search" class="form-control form-control-user" id="name" name="name" placeholder="맛집명을 입력해주세요." />
                                     </div>
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="mainAddress" name="mainAddress" placeholder="메인주소" />
+                                        메인주소 <input type="text" class="form-control form-control-user" id="mainAddress" name="mainAddress" placeholder="메인주소" />
                                     </div>
                                     <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="detailAddress" name="detailAddress"  placeholder="상세주소" />
+                                        상세주소 <input type="text" class="form-control form-control-user" id="detailAddress" name="detailAddress"  placeholder="상세주소" />
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" id="phone" name="phone" placeholder="연락처를 입력해주세요." />
+                                    연락처 <input type="text" class="form-control form-control-user" id="phone" name="phone" placeholder="연락처를 입력해주세요." />
                                 </div>
                                 <div class="form-group">
+                                    카테고리
                                     <select name="category" class="form-control form-control-sm">
                                         <option value="">선택</option>
                                         <option value="01">한식</option>
@@ -42,9 +43,10 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <input type="search" class="form-control form-control-user" id="rating" name="rating" placeholder="평점을 입력해주세요." />
+                                    평점 <input type="search" class="form-control form-control-user" id="rating" name="rating" placeholder="평점을 입력해주세요." />
                                 </div>
                                 <div class="form-group">
+                                    재방문 의사
                                     <select name="revisit" class="form-control form-control-sm">
                                         <option value="">선택</option>
                                         <option value="1">있음</option>
